@startuml

title __MUSICCOMMANDS's Class Diagram__\n

  namespace MusicModule {
    namespace MusicCommands {
      class MusicModule.MusicCommands.MusicCommand {
          - helpText : String
          + execute()
          + getHelp()
      }
    }
  }
  

  namespace MusicModule {
    namespace MusicCommands {
      class MusicModule.MusicCommands.MusicCurrentlyPlayingCommand {
          + MusicCurrentlyPlayingCommand()
          + execute()
      }
    }
  }
  

  namespace MusicModule {
    namespace MusicCommands {
      class MusicModule.MusicCommands.MusicPauseCommand {
          + MusicPauseCommand()
          + execute()
      }
    }
  }
  

  namespace MusicModule {
    namespace MusicCommands {
      class MusicModule.MusicCommands.MusicPlayCommand {
          + MusicPlayCommand()
          + execute()
      }
    }
  }
  

  namespace MusicModule {
    namespace MusicCommands {
      class MusicModule.MusicCommands.MusicQueueCommand {
          + MusicQueueCommand()
          + execute()
      }
    }
  }
  

  namespace MusicModule {
    namespace MusicCommands {
      class MusicModule.MusicCommands.MusicResumeCommand {
          + MusicResumeCommand()
          + execute()
      }
    }
  }
  

  namespace MusicModule {
    namespace MusicCommands {
      class MusicModule.MusicCommands.MusicSearchCommand {
          ~ waiter : EventWaiter
          + MusicSearchCommand()
          + execute()
      }
    }
  }
  

  namespace MusicModule {
    namespace MusicCommands {
      class MusicModule.MusicCommands.MusicSkipCommand {
          + MusicSkipCommand()
          + execute()
      }
    }
  }
  

  MusicModule.MusicCommands.MusicCommand -up-|> Commands.Command
  MusicModule.MusicCommands.MusicCurrentlyPlayingCommand -up-|> Commands.Command
  MusicModule.MusicCommands.MusicCurrentlyPlayingCommand o-- MusicModule.MusicController : controller
  MusicModule.MusicCommands.MusicPauseCommand -up-|> Commands.Command
  MusicModule.MusicCommands.MusicPauseCommand o-- MusicModule.MusicController : musicController
  MusicModule.MusicCommands.MusicPlayCommand -up-|> Commands.Command
  MusicModule.MusicCommands.MusicPlayCommand o-- MusicModule.MusicController : controller
  MusicModule.MusicCommands.MusicQueueCommand -up-|> Commands.Command
  MusicModule.MusicCommands.MusicQueueCommand o-- MusicModule.MusicController : controller
  MusicModule.MusicCommands.MusicResumeCommand -up-|> Commands.Command
  MusicModule.MusicCommands.MusicResumeCommand o-- MusicModule.MusicController : controller
  MusicModule.MusicCommands.MusicSearchCommand -up-|> Commands.Command
  MusicModule.MusicCommands.MusicSearchCommand o-- MusicModule.MusicController : controller
  MusicModule.MusicCommands.MusicSkipCommand -up-|> Commands.Command
  MusicModule.MusicCommands.MusicSkipCommand o-- MusicModule.MusicController : controller


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
